network-optimized-02/security.tf
# Load Balancer için Güvenlik Grubu (Dış dünyaya açık)
resource "aws_security_group" "alb_sg" {
  name        = "opt-alb-sg"
  description = "Allow HTTP inbound traffic"
  vpc_id      = aws_vpc.opt_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EC2 Makineleri için Güvenlik Grubu (Sadece ALB'den gelen trafiğe açık)
resource "aws_security_group" "ec2_sg" {
  name        = "opt-ec2-sg"
  description = "Allow traffic from ALB only"
  vpc_id      = aws_vpc.opt_vpc.id

  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
